--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -15,7 +15,7 @@ jobs:
 
     steps:
       - name: Checkout repo
-        uses: actions/checkout@v3
+        uses: actions/checkout@v4
 
       - name: Install dependencies
         run: npm ci
@@ -26,7 +26,7 @@ jobs:
           mv *.tgz app.tgz
 
       - name: Upload artifact
-        uses: actions/upload-artifact@v3
+        uses: actions/upload-artifact@v4
         with:
           name: app-package
           path: app.tgz
@@ -38,13 +38,13 @@ jobs:
 
     steps:
       - name: Download app artifact
-        uses: actions/download-artifact@v3
+        uses: actions/download-artifact@v4
         with:
           name: app-package
           path: app-package
 
       - name: Checkout repo
-        uses: actions/checkout@v3
+        uses: actions/checkout@v4
 
       - name: Log in to DockerHub
         uses: docker/login-action@v2
@@ -83,8 +83,8 @@ jobs:
             docker stop nodeapp || true
             docker rm nodeapp || true
 
-            echo "Starting new container..."
+            echo "Starting new container (nodeapp)..."
             docker run -d -p 80:3000 --name nodeapp ${{ secrets.DOCKER_USERNAME }}/nodeapp:latest
 
-            echo "Starting new container..."
+            echo "Starting new container (weather-app)..."
             docker run -d -p 5000:5000 --name weather-app ${{ env.IMAGE_NAME }}:${{ github.run_number }}
