--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -47,18 +47,21 @@ jobs:
         uses: actions/checkout@v4
 
       - name: Log in to DockerHub
-        uses: docker/login-action@v2
+        uses: docker/login-action@v3
         with:
           username: ${{ secrets.DOCKER_USERNAME }}
           password: ${{ secrets.DOCKER_PASSWORD }}
 
-      - name: Build and push Docker image
-        uses: docker/build-push-action@v4
+      - name: Build and push Docker image (no cache)
+        uses: docker/build-push-action@v6
         with:
           context: ./app-package
           file: ./Dockerfile
           push: true
-          tags: ${{ env.IMAGE_NAME }}:${{ github.run_number }}
+          no-cache: true
+          tags: |
+            ${{ secrets.DOCKER_USERNAME }}/nodeapp:${{ github.sha }}
+            ${{ secrets.DOCKER_USERNAME }}/nodeapp:latest
 
   deploy:
     name: Deploy Container on VM
