--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -9,50 +9,12 @@ env:
   IMAGE_NAME: reem2244/weather-app
 
 jobs:
-  app-build:
-    name: Build and Package App
+  docker-build:
+    name: Build and Push Docker Image
     runs-on: ubuntu-latest
 
     steps:
       - name: Checkout repo
-        uses: actions/checkout@v4
-
-      - name: Install dependencies
-        run: npm ci
-
-      - name: Package Node.js app
-        run: |
-          npm pack
-          mv *.tgz app.tgz
-
-      - name: Upload artifact
-        uses: actions/upload-artifact@v4
-        with:
-          name: app-package
-          path: app.tgz
-
-  docker-build:
-    name: Build Docker Image
-    runs-on: ubuntu-latest
-    needs: app-build
-
-    steps:
-      - name: Download app artifact
-        uses: actions/download-artifact@v4
-        with:
-          name: app-package
-          path: app-package
-
-      - name: Check artifact exists
-        run: |
-          echo "Listing contents of app-package folder:"
-          ls -l app-package
-
-      - name: Extract app artifact
-        run: |
-          tar -xzf app-package/app.tgz -C app-package --strip-components=1
-
-      - name: Checkout repo (for Dockerfile)
         uses: actions/checkout@v4
 
       - name: Log in to DockerHub
@@ -61,13 +23,12 @@ jobs:
           username: ${{ secrets.DOCKER_USERNAME }}
           password: ${{ secrets.DOCKER_PASSWORD }}
 
-      - name: Build and push Docker image (no cache)
+      - name: Build and push Docker image
         uses: docker/build-push-action@v6
         with:
-          context: ./app-package
+          context: .
           file: ./Dockerfile
           push: true
-          no-cache: true
           tags: |
             ${{ env.IMAGE_NAME }}:${{ github.sha }}
             ${{ env.IMAGE_NAME }}:latest
